--- a/SortAlgorithm.vcxproj
+++ b/SortAlgorithm.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="SortAlgorithm.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Function.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
